--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,74 @@ run.bat
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+ENV/
 
 # IDE
 .idea/
 .vscode/
+*.swp
+*.swo
 
-# Environment
-venv/
-env/
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Project specific
+flask_session/
+backup_*/
+*_filelist.txt
+all_files.txt
+not_in_github.txt
+static/
+*.log
+
+# Node.js
+node_modules/
+package-lock.json
+
+# Background process
+nohup.out
+
+# Additional temp files
+tracked_files.txt
+*.tmp
+*.temp
 .env
+
+# Additional macOS files
+.DS_Store
+**/.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+.DocumentRevisions-V100
+.fseventsd
+.TemporaryItems
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
