chore: remove q_table_single_hand_dump.csv, ignore it in git, and stop exporting it in code

--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,5 @@ not_in_github.txt
 all_files.txt
 tracked_files.txt
 root_filelist.txt
-backup_filelist.txt 
+backup_filelist.txt
+results/q_table_single_hand_dump.csv 
